--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-Django==2.2.2
+asgiref==3.2.7
 dj-database-url==0.5.0
+Django==3.0.5
 django-extensions==2.1.9
+psycopg2-binary==2.8.5
 python-decouple==3.1
 pytz==2019.1
 six==1.12.0
